<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.example.user.mvvmregistration.viewmodel.RegistrationViewModel"/>
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.mvvmregistration.ui.RegistrationActivity">

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="6dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:text="@={vm.email}"/>

    <EditText
        android:id="@+id/edPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edEmail"
        android:layout_margin="6dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@={vm.password}"/>

    <EditText
        android:id="@+id/edConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edPass"
        android:layout_margin="6dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:text="@={vm.confirmPassword}"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="6dp"
        android:enabled="@{vm.registrationEnabled}"
        android:onClick="@{(v) -> vm.onRegistrationClick(v)}"
        android:text="Registrate" />

</RelativeLayout>
</layout>